# FastAPI-The-Complete-Course

./: pyproject.toml
Project 2/: my_books.py
notebook/: play.ipynb
